--- a/style.css
+++ b/style.css
@@ -6,13 +6,18 @@
 body{
     background-color: #f5f5f5;
     font-family: 'Roboto', sans-serif;
+    display: flex;
+    justify-content: space-between;
+
 }
 footer{
     margin-top: 20px;
-    margin-left: 130px;
+    margin-left: 140px;
     margin-right: 40px;
     display: flex;
     flex-direction: column;
+    width: 85vw;
+    z-index: -1;
 }
 #section-1{
     display: flex;
@@ -162,7 +167,7 @@ p{
 }
 p:hover{
     text-decoration: underline;
-    cursor: grab;
+    cursor: pointer;
 }
 #icon>div:hover{
     border-color: rgb(134, 134, 134);
@@ -172,12 +177,18 @@ hr{
 }
 #first>div>.button:hover{
     background-color: rgb(57, 57, 57);
+    cursor: pointer;
 }
 #second>div>.button:hover{
     background-color: rgb(57, 57, 57);
+    cursor: pointer;
 }
 #last:hover{
     outline: 1px solid black;
+    
+}
+#last>p{
+    text-decoration: none;
 }
 #section-3 div p{
     text-decoration: none;
@@ -190,4 +201,76 @@ hr{
 }
 #part4{
     margin-right: -100px;
+}
+#icon>div:hover{
+    cursor: pointer;
+}
+#sidebar{
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    margin-left: 50px;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-bottom: 100px;
+    padding-top: 30px;
+    padding-bottom: 40px;
+    height: 90vh;
+    z-index: 1;
+}
+#menu-icon>img{
+    width: 20px;
+    height: auto;
+}
+#arrow>div>img{
+    width: 20px;
+    height: auto;
+}
+#arrow{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 40px;
+    height: 40px;
+    border-radius: 20px;
+    background-color: black;
+    overflow: hidden;
+    border: none;
+    transition: 0.3s;
+    
+}
+#menu-icon{
+    display: flex;
+    /* flex-direction: column; */
+    justify-content: center;
+    margin-bottom: 15px;
+}
+#arrow>div{
+    display: flex;
+
+    align-items: center;
+    padding: 10px;
+}
+
+#arrow:hover{
+    display: flex;
+    align-items: center;
+    width: 140px;
+    height: 40px;
+    border-radius: 20px;
+    background-color: black;
+    /* overflow: hidden; */
+    justify-content: space-around;
+    border: none;
+}
+#arrow:hover::after{
+    content: "Back to top";
+    /* padding-left: 10px; */
+    font-size: 12px;
+    font-weight: bold;
+    color: white;
+}
+span>h4{
+    color: white;
+    display: inline;
 }
